force-app/main/default/objects/TributoICMSST__c/TributoICMSST__c.object-meta.xml
<CustomObject>
    <label>Tributo ICMS ST</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tributos ICMS ST</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>