force-app/main/default/objects/TributoICMSST__c/fields/CalculoItemImportado__c.field-meta.xml
<CustomField>
    <fullName>CalculoItemImportado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cálculo para Item Importado</label>
    <type>Checkbox</type>
</CustomField>