force-app/main/default/objects/TributoICMSST__c/fields/ClassificacaoFiscal__c.field-meta.xml
<CustomField>
    <fullName>ClassificacaoFiscal__c</fullName>
    <label>Classificação Fiscal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>