force-app/main/default/objects/TributoICMSST__c/fields/CodigoTributoICMSST__c.field-meta.xml
<CustomField>
    <fullName>CodigoTributoICMSST__c</fullName>
    <externalId>true</externalId>
    <label>Código Tributo ICMS ST</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>