force-app/main/default/objects/TributoICMSST__c/fields/MVA__c.field-meta.xml
<CustomField>
    <fullName>MVA__c</fullName>
    <label>MVA</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>