force-app/main/default/objects/TributoICMSST__c/fields/NaturezaOperacao__c.field-meta.xml
<CustomField>
    <fullName>NaturezaOperacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natureza de Operação</label>
    <referenceTo>NaturezaOperacao__c</referenceTo>
    <relationshipLabel>Tributos ICMS ST</relationshipLabel>
    <relationshipName>TributosICMSST</relationshipName>
    <type>Lookup</type>
</CustomField>