force-app/main/default/objects/TributoICMSST__c/fields/PercentualICMSUFDestino__c.field-meta.xml
<CustomField>
    <fullName>PercentualICMSUFDestino__c</fullName>
    <label>Percentual ICMS UF Destino</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>