force-app/main/default/objects/TributoICMSST__c/fields/PercentualICMSUFOrigem__c.field-meta.xml
<CustomField>
    <fullName>PercentualICMSUFOrigem__c</fullName>
    <label>Percentual ICMS UF Origem</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>