force-app/main/default/objects/TributoICMSST__c/fields/RegimeTributario__c.field-meta.xml
<CustomField>
    <fullName>RegimeTributario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regime Tributário</label>
    <type>Checkbox</type>
</CustomField>