force-app/main/default/objects/TributoICMSST__c/fields/UnidadeFederativa__c.field-meta.xml
<CustomField>
    <fullName>UnidadeFederativa__c</fullName>
    <label>Unidade Federativa</label>
    <length>2</length>
    <type>Text</type>
</CustomField>